<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="350dp"
    android:layout_height="170dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="@dimen/material_layout_app_bar_height"
    app:cardElevation="10dp"
    app:cardCornerRadius="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp">
        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_title" />
        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/organisers_picture"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/img_test"
            android:layout_below="@id/card_title" />
        <TextView
            android:id="@+id/organisers_name"
            android:text="@string/organisers_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/attendees"
            android:layout_toRightOf="@+id/notification_number"
            android:layout_toEndOf="@+id/notification_number" />
        <TextView
            android:id="@+id/attendees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendees"
            android:textSize="10sp"
            android:layout_below="@id/card_title"
            android:layout_toEndOf="@id/organisers_name"
            android:layout_toRightOf="@id/organisers_name"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:id="@+id/event_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_summary"
            android:layout_below="@id/organisers_picture"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/comments_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/notification_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/comments_btn"
            android:layout_alignRight="@id/comments_btn"
            android:layout_alignEnd="@id/comments_btn"
            android:text="10"
            android:textColor="#FF0000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/join_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/organisers_name"
            android:layout_toEndOf="@+id/organisers_name" />
    </RelativeLayout>

</android.support.v7.widget.CardView>
